--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/stack": "^7.6.4",
     "axios": "^1.13.2",
+    "expo-linear-gradient": "^15.0.7",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-csv": "^0.2.0",
